# PeakRDL-beam

./: README.md  pyproject.toml
.github/workflows/: build.yml
docs/: api.rst  conf.py  configuring.rst  header_output.rst  index.rst  licensing.rst  module_output.rst
src/peakrdl_beam/: __peakrdl__.py  beam_languages.py  erlang_header.py  erlang_module.py  exporter.py  identifier_filter.py  scanner.py  state.py  utils.py
src/peakrdl_beam/templates/: header.hrl  module.erl
src/peakrdl_erlang/: __peakrdl__.py  erlang_module.py  exporter.py  scanner.py  state.py
src/peakrdl_erlang/templates/: module.erl
